--- a/_site.yml
+++ b/_site.yml
@@ -1,8 +1,9 @@
 name: "R-bootcamp-2020"
+output_dir: "."
 navbar:
   title: "R Bootcamp 2020"
   left:
     - text: "Home"
       href: index.html
     - text: "Syllabus"
-      href: about.html
+      href: syllabus.html
