--- a/_site.yml
+++ b/_site.yml
@@ -6,4 +6,4 @@ navbar:
       href: index.html
     - text: "Syllabus"
       href: syllabus.html
-  exclude: ["*.xlsx", "data", "*.pdn"]
+  exclude: ["*.xlsx", "data", "*.pdn", "*_cache"]
